# eBoekhouden

./: README.md  setup.cfg  setup.py
eboekhouden/: __init__.py  app.py  const.py  model.py
eboekhouden/models/: __init__.py  administratie.py  artikel.py  factuur.py  grootboekrekening.py  kostenplaats.py  mutatie.py  open_post.py  relatie.py  saldo.py
eboekhouden/types/: __init__.py  btw_code.py  eenheid.py  geslacht.py  grootboek_categorie.py  in_ex_btw.py  incasso_machting_soort.py  mutatie_soort.py  relatie_type.py
tests/: __init__.py  test_administratie.py  test_artikel.py  test_client.py  test_factuur.py  test_grootboekrekening.py  test_kostenplaats.py  test_kostenplaatsy.py  test_mutatie.py  test_open_post.py  test_relatie.py  test_saldi.py  test_saldo.py
